--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "foundationpress",
-  "title": "FoundationPress",
+  "name": "Seidlaeti",
+  "title": "Seidlaeti",
   "version": "2.10.4",
   "description": "FoundationPress is a WordPress starter theme based on Foundation 6 by Zurb",
   "homepage": "https://foundationpress.olefredrik.com",
